--- a/index.html
+++ b/index.html
@@ -201,14 +201,30 @@
     <div class="columns is-centered">
         <div class="column">
           <div class="content">
-            <h4>Sequence 377</h4>
+            <h4><a href="webgl/377/index.html">Sequence 377</a></h4>
+
+            <div class="card">
+              <img src="static/previews/example.png" alt="377">
+              <div class="container">
+                <!-- <h4><b>John Doe</b></h4> -->
+                <p>30 MB</p>
+              </div>
+            </div>
 
           </div>
         </div>
         <div class="column">
           <div class="columns is-centered">
             <div class="column content">
-              <h4>Sequence 393</h4>
+              <h4><a href="webgl/377/index.html">Sequence 393</a></h4>
+
+              <div class="card">
+                <img src="static/previews/example.png" alt="377">
+                <div class="container">
+                  <!-- <h4><b>John Doe</b></h4> -->
+                  <p>32 MB</p>
+                </div>
+              </div>
 
             </div>
           </div>
@@ -216,7 +232,15 @@
         <div class="column">
           <div class="columns is-centered">
             <div class="column content">
-              <h4>Sequence 394</h4>
+              <h4><a href="webgl/377/index.html">Sequence 394</a></h4>
+
+              <div class="card">
+                <img src="static/previews/example.png" alt="377">
+                <div class="container">
+                  <!-- <h4><b>John Doe</b></h4> -->
+                  <p>35 MB</p>
+                </div>
+              </div>
 
             </div>
           </div>
