--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
             <h4><a href="webgl/377/index.html">Sequence 377</a></h4>
 
             <div class="card">
-              <img src="static/previews/example.png" alt="377">
+              <img src="static/previews/377.png" alt="377">
               <div class="container">
                 <!-- <h4><b>John Doe</b></h4> -->
                 <p>30 MB</p>
@@ -219,7 +219,7 @@
               <h4><a href="webgl/377/index.html">Sequence 393</a></h4>
 
               <div class="card">
-                <img src="static/previews/example.png" alt="377">
+                <img src="static/previews/393.png" alt="393">
                 <div class="container">
                   <!-- <h4><b>John Doe</b></h4> -->
                   <p>32 MB</p>
@@ -235,7 +235,7 @@
               <h4><a href="webgl/377/index.html">Sequence 394</a></h4>
 
               <div class="card">
-                <img src="static/previews/example.png" alt="377">
+                <img src="static/previews/394.png" alt="394">
                 <div class="container">
                   <!-- <h4><b>John Doe</b></h4> -->
                   <p>35 MB</p>
