--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <h2 class="title is-3">Video</h2>
-          <video src="static/videos/393.mp4" data-canonical-src="static/videos/393.mp4" controls="controls" muted="muted" height="60%" width="60%">
+          <video autoplay src="static/videos/393.mp4" data-canonical-src="static/videos/393.mp4" controls="controls" muted="muted" height="60%" width="60%">
 
           </video>
       </div>
@@ -204,10 +204,12 @@
             <h4><a href="webgl/377/index.html">Sequence 377</a></h4>
 
             <div class="card">
-              <img src="static/previews/377.png" alt="377">
+              <a href="webgl/377/index.html">
+                <img src="static/previews/377.png" alt="377">
+              </a>
               <div class="container">
                 <!-- <h4><b>John Doe</b></h4> -->
-                <p>30 MB</p>
+                <p>64 MB</p>
               </div>
             </div>
 
@@ -219,10 +221,12 @@
               <h4><a href="webgl/377/index.html">Sequence 393</a></h4>
 
               <div class="card">
-                <img src="static/previews/393.png" alt="393">
+                <a href="webgl/377/index.html">
+                  <img src="static/previews/393.png" alt="393">
+                </a>
                 <div class="container">
                   <!-- <h4><b>John Doe</b></h4> -->
-                  <p>32 MB</p>
+                  <p>62 MB</p>
                 </div>
               </div>
 
@@ -235,10 +239,12 @@
               <h4><a href="webgl/377/index.html">Sequence 394</a></h4>
 
               <div class="card">
-                <img src="static/previews/394.png" alt="394">
+                <a href="webgl/377/index.html">
+                  <img src="static/previews/394.png" alt="394">
+                </a>
                 <div class="container">
                   <!-- <h4><b>John Doe</b></h4> -->
-                  <p>35 MB</p>
+                  <p>63 MB</p>
                 </div>
               </div>
 
