--- a/corgi.html
+++ b/corgi.html
@@ -3,7 +3,7 @@
 <head>
 	<style type="text/css">
 		#loadingBar {
-			position: fixed; /* or absolute */
+			position: fixed;
 		  	top: 50%;
 		  	left: 50%;
 		}
@@ -16,7 +16,7 @@
       import { MTLLoader } from "https://unpkg.com/three@0.125.2/examples/jsm/loaders/MTLLoader.js";
       import { TrackballControls } from "https://unpkg.com/three@0.125.2/examples/jsm/controls/TrackballControls.js";
 
-      	let NUM_FRAMES = 63;
+    let NUM_FRAMES = 63;
 		let MODEL_PATH = 'models/a_corgi_playing_with_a_ball/';
 		let ALBEDO_FORMAT = '.jpg';
 
@@ -24,10 +24,9 @@
 		let currFrameIndex = 0;
 		let currTime = Date.now();
 
-		init();
-
 		var frameIndexToObject = {};
 
+		init();
 		createFrames().then(animate());
 
 		async function createFrames() {
@@ -35,27 +34,12 @@
 			const objLoader = new OBJLoader();
 
 			for (let frameIndex = 0; frameIndex < NUM_FRAMES; frameIndex++) {
-				// const [ texture, obj ] = await Promise.all( [
-				// 	textureLoader.loadAsync(MODEL_PATH + frameIndex + '_albedo' + ALBEDO_FORMAT),
-				// 	objLoader.loadAsync(MODEL_PATH + frameIndex + '_mesh.obj'),
-				// ] );
-
-				// obj.name = 'loaded_mesh';
-				// obj.children[0].material.map = texture;
-				// obj.children[0].geometry.computeVertexNormals();
-
-				// frameIndexToObject[frameIndex] = obj;
-
-				// console.log(frameIndexToObject);
-
-
 				Promise.all([
 					textureLoader.loadAsync(MODEL_PATH + frameIndex + '_albedo' + ALBEDO_FORMAT),
 					objLoader.loadAsync(MODEL_PATH + frameIndex + '_mesh.obj'),
 				]).then((values) => {
 						var texture = values[0];
-						var obj = values[1];
-						//let [texture, obj] = values[0], values[1];						
+						var obj = values[1];				
 
 						obj.name = 'loaded_mesh';
 						obj.children[0].material.map = texture;
@@ -63,20 +47,19 @@
 
 						frameIndexToObject[frameIndex] = obj;
 
-						console.log(frameIndexToObject);
+						var element = document.getElementById('loadingBar');
+						if (element != null) {
+							var percent = Math.floor((Object.keys(frameIndexToObject).length / NUM_FRAMES) * 100);
+							element.textContent = "Loaded " + percent + "%";
+						}
 				});
 			}
 		}
 
 
-
 		function init() {
-
-
 			camera = new THREE.PerspectiveCamera( 45, window.innerWidth / window.innerHeight, 1, 200 );
-			camera.position.z = 5;
-
-			// scene
+			camera.position.z = 7;
 
 			scene = new THREE.Scene();
 			scene.background = new THREE.Color( 0xffffff );
@@ -88,33 +71,24 @@
 			camera.add( pointLight );
 			scene.add( camera );
 
-
 			renderer = new THREE.WebGLRenderer();
 			renderer.setPixelRatio( window.devicePixelRatio );
 			renderer.setSize( window.innerWidth, window.innerHeight );
 			document.body.appendChild( renderer.domElement );
 
-
 			controls = new TrackballControls( camera, renderer.domElement );
-
 			controls.rotateSpeed = 1.5;
 			controls.zoomSpeed = 1.2;
 			controls.panSpeed = 1.2;
-
 			controls.keys = [ 'KeyA', 'KeyS', 'KeyD' ];
 
-
 			window.addEventListener( 'resize', onWindowResize );
-
 		}
 
 		function onWindowResize() {
-
 			camera.aspect = window.innerWidth / window.innerHeight;
 			camera.updateProjectionMatrix();
-
 			renderer.setSize( window.innerWidth, window.innerHeight );
-
 		}
 
 		function animate() {
@@ -137,15 +111,12 @@
 
 			}
 
-			renderer.render( scene, camera );
+			renderer.render(scene, camera);
 
 		}
 
-
-
-
     </script>
-    <div id="loadingBar">Loading...</div>
+    <div id="loadingBar"></div>
   </body>
 </html>
 
