--- a/draco_exp.html
+++ b/draco_exp.html
@@ -74,8 +74,8 @@
 			const ambientLight = new THREE.AmbientLight( 0xcccccc, 0.4 );
 			scene.add( ambientLight );
 
-			const pointLight = new THREE.PointLight( 0xffffff, 0.8 );
-			camera.add( pointLight );
+			// const pointLight = new THREE.PointLight( 0xffffff, 0.8 );
+			// camera.add( pointLight );
 			scene.add( camera );
 
 			renderer = new THREE.WebGLRenderer();
